Added Docker config & .gitattributes to normalize line endings and set specific diff drivers

--- a/public/assets/locales/cat/translation.json
+++ b/public/assets/locales/cat/translation.json
@@ -4,7 +4,7 @@
     "sidebar-about": "Sobre Mi",
     "sidebar-contact": "Contacte",
     
-    "header-subtitle": "Desenvolupador Web i de Videojocs.",
+    "header-subtitle": "Desenvolupador Full-Stack",
     "download-cv": "Descarrega CV",
     "back-to-top": "Torna a dalt",
 
