--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -4,7 +4,7 @@
     "sidebar-about": "About Me",
     "sidebar-contact": "Contact",
     
-    "header-subtitle": "Game and Web Developer.",
+    "header-subtitle": "Full-Stack Developer.",
     "download-cv": "Download Resume",
     "back-to-top": "Back to Top",
 
