--- a/public/assets/locales/es/translation.json
+++ b/public/assets/locales/es/translation.json
@@ -4,7 +4,7 @@
     "sidebar-about": "Sobre Mi",
     "sidebar-contact": "Contacto",
     
-    "header-subtitle": "Desarrollador Web y de Videojuegos.",
+    "header-subtitle": "Desarrollador Full-Stack",
     "download-cv": "Descargar CV",
     "back-to-top": "Volver al Inicio",
 
