--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -43,7 +43,19 @@
     }
   },
   "contact": {
-    "title": "Ponte en contacto!"
+    "title": "Ponte en contacto!",
+    "form": {
+      "name": "Nombre",
+      "email": "Correu electrónico",
+      "subject": "Asunto",
+      "message": "Mensaje",
+      "sending": "Enviando...",
+      "submit": "Enviar Mensaje"
+    },
+    "text": {
+      "p": "Si tienes alguna pregunta o quieres hablar sobre un proyecto, no dudes en ponerte en contacto conmigo. Estoy abierto a nuevas oportunidades y colaboraciones.",
+      "span": "Te responderé pronto!"
+    }
   },
   "footer": {
     "copyright": "© 2025. Puedes copiar todo lo que quieras."
