--- a/public/locales/cat/translation.json
+++ b/public/locales/cat/translation.json
@@ -43,7 +43,19 @@
     }
   },
   "contact": {
-    "title": "Posa't en contacte!"
+    "title": "Posa't en contacte!",
+    "form": {
+      "name": "Nom",
+      "email": "Correu electrònic",
+      "subject": "Assumpte",
+      "message": "Missatge",
+      "sending": "Enviant...",
+      "submit": "Enviar Missatge"
+    },
+    "text": {
+      "p": "Si tens alguna pregunta o vols parlar sobre un projecte, no dubtis a posar-te en contacte amb mi. Estic obert a noves oportunitats i col·laboracions.",
+      "span": "Et respondré aviat!"
+    }
   },
   "footer": {
     "copyright": "© 2025. Pots copiar tot el que vulguis."
