--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -9,6 +9,7 @@
     "name": "Ignacio.",
     "subtitle": "Desarrollador Full Stack",
     "description": "con una mentalidad creativa y orientada a resultados, combinando una sólida base técnica con una perspectiva única gracias a mi experiencia previa en educación. Me motiva el aprendizaje continuo y asumir nuevos retos.",
+    "email-copied": "Copiado!",
     "cta": {
       "download": "Descarga CV"
     },
@@ -50,7 +51,9 @@
       "subject": "Asunto",
       "message": "Mensaje",
       "sending": "Enviando...",
-      "submit": "Enviar Mensaje"
+      "submit": "Enviar Mensaje",
+      "success": "Mensaje enviado correctamente!",
+      "error": "Hubo un error. Por favor, inténtalo de nuevo."
     },
     "text": {
       "p": "Si tienes alguna pregunta o quieres hablar sobre un proyecto, no dudes en ponerte en contacto conmigo. Estoy abierto a nuevas oportunidades y colaboraciones.",
